--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+@font-face {
+  font-family: "CinzelDecorative";
+  src: url("/src/assets/font/CinzelDecorative-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
