--- a/src/style/prizes.css
+++ b/src/style/prizes.css
@@ -1,6 +1,7 @@
 .prizes-container {
   width: 100%;
-  padding: 40px;
+  min-height: 100vh;
+  padding: 40px 40px 100px;
   text-align: center;
   color: white;
   display: flex;
@@ -11,6 +12,7 @@
 }
 
 .prizes-title {
+  font-family: "Camood", sans-serif;
   font-size: 3rem;
   font-weight: bold;
   margin-bottom: 40px;
@@ -22,10 +24,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .podium-image {
-  max-width: 60%;
+  max-width: 50%;
   height: auto;
   display: block;
   position: relative;
@@ -34,8 +37,10 @@
 
 .orbit-image {
   position: absolute;
-  top: 200px; /* Adjust vertical overlap */
-  max-width: 70%;
+  top: 500px;
+  max-width: 60%;
   height: auto;
   z-index: 1;
+  left: 50%;
+  transform: translateX(-50%);
 }
