--- a/src/style/tracks.css
+++ b/src/style/tracks.css
@@ -1,7 +1,6 @@
 .tracks-bg {
   background: 
-    linear-gradient(to bottom, rgba(0,0,0,0) 80%, black 100%);
-  min-height: 100vh;
+    linear-gradient(to bottom, rgba(0,0,0,0) 80%, #121012 100%);
 }
 
 .mountain-glow-tracks {
@@ -12,7 +11,7 @@
   height: 80vh;
   object-fit: contain;
   object-position: top;
-  /* mask: linear-gradient(to bottom, black 0%, black 70%, transparent 100%);
-  -webkit-mask: linear-gradient(to bottom, black 0%, black 70%, transparent 100%); */
+  mask: linear-gradient(to bottom, black 0%, black 70%, transparent 100%);
+  -webkit-mask: linear-gradient(to bottom, black 0%, black 70%, transparent 100%);
   z-index: 30;
 }
